--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 *~
 *.pyc
-/haas-rest-test/_version.py
-/haas-rest-test.egg-info
+/haas_rest_test/_version.py
+/haas_rest_test.egg-info
 /.coverage
 /htmlcov
 /docs/build
