--- a/.travis.yml
+++ b/.travis.yml
@@ -15,8 +15,8 @@ install:
   - pip install -r test_requirements.txt
 
 script:
-  - if [[ $TRAVIS_PYTHON_VERSION == '2.6' ]]; then python -m haas.__main__; fi
-  - if [[ $TRAVIS_PYTHON_VERSION != '2.6' ]]; then python -m haas; fi
+  - if [[ $TRAVIS_PYTHON_VERSION == '2.6' ]]; then coverage run -m haas.__main__; fi
+  - if [[ $TRAVIS_PYTHON_VERSION != '2.6' ]]; then coverage run -m haas; fi
 
 after_success:
   coveralls
